conflicts solved