@@ -14,6 +14,9 @@ concurrentRestrictions in Global := {
 }
 enablePlugins(sbtdocker.DockerPlugin)
 
+val aspectjRedistDir = Def.setting(baseDirectory.value / ".." / "third-party" / "aspectj")
+val yourKitRedistDir = Def.setting(baseDirectory.value / ".." / "third-party" / "yourkit")
+
 inTask(docker)(
   Seq(
     dockerfile := {
@@ -81,23 +84,27 @@ lazy val itTestsCommonSettings: Seq[Def.Setting[_]] = Seq(
     for {
       group <- testGrouping.value
       suite <- group.tests
-
-    } yield Group(
-      suite.name,
-      Seq(suite),
-      Tests.SubProcess(ForkOptions(
-        javaHome = javaHomeValue,
-        outputStrategy = outputStrategy.value,
-        bootJars = Vector.empty[java.io.File],
-        workingDirectory = Option(baseDirectory.value),
-        runJVMOptions = Vector(
-          "-DTN.it.logging.appender=FILE",
-          s"-DTN.it.logging.dir=${logDirectoryValue / suite.name.replaceAll("""(\w)\w*\.""", "$1.")}",
-          s"-DTN.profiling.yourKitDir=$yourKitRedistDirValue"
-        ) ++ javaOptionsValue,
-        connectInput = false,
-        envVars = envVarsValue
-      )))
+    } yield
+      Group(
+        suite.name,
+        Seq(suite),
+        Tests.SubProcess(
+          ForkOptions(
+            javaHome = javaHomeValue,
+            outputStrategy = outputStrategy.value,
+            bootJars = Vector.empty[java.io.File],
+            workingDirectory = Option(baseDirectory.value),
+            runJVMOptions = Vector(
+              "-XX:+IgnoreUnrecognizedVMOptions",
+              "--add-modules=java.xml.bind",
+              "-DTN.it.logging.appender=FILE",
+              s"-DTN.it.logging.dir=${logDirectoryValue / suite.name.replaceAll("""(\w)\w*\.""", "$1.")}",
+              s"-DTN.profiling.yourKitDir=$yourKitRedistDirValue"
+            ) ++ javaOptionsValue,
+            connectInput = false,
+            envVars = envVarsValue
+          ))
+      )
   }
 )
 
